@@ -63,6 +63,7 @@ TRANSLATE_WWW_AUTHENTICATE = 56
 TRANSLATE_AUTHENTICATION_INFO = 57
 TRANSLATE_AUTHORIZATION = 58
 TRANSLATE_HEADER = 59
+TRANSLATE_UNTRUSTED_PREFIX = 60
 
 HEADER_FORWARD_NO = 0
 HEADER_FORWARD_YES = 1
